--- a/src/style.css
+++ b/src/style.css
@@ -4,11 +4,12 @@
     --CormorantGaramond: 'Cormorant Garamond', serif;
     --Rajdhani: 'Rajdhani', sans-serif;
     --SourceCodePro: 'Source Code Pro', monospace;
+    
 
     --MainColor:white;
     --PrimaryColor:black;
     --SecondaryColor:red;
-
+    --NavBarColor:rgba(255, 255, 255, 0.233);
 }
 *{
     padding: 0;
@@ -20,42 +21,8 @@ body{
     border: 2px solid blueviolet;
     height: 100vh;
 }
-/* -----navigation----- */
-/* .Nav-container{
-    width: 100%;
-    height: 30%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 5px 10px;
-    border: 2px solid rgba(0, 0, 0, .09);
-} */
-.Nav-container .logo{
-    display: flex;
-    /* flex-direction: column; */
-    align-items: center;
-    /* justify-content: center; */
-    cursor: pointer;
-    transition: 1s ease-in-out;
-    padding: 5px;
-    border: 2p solid red;
 
-}
-.Nav-container .logo:hover{
-    background: rgb(128, 128, 128,.2);
-}
-
-.Nav-container .logo img{
-    width: 45px;
-    height: 45px;
-    border-radius: 50%;
-}
-.Nav-container .logo h3{
-    font-family: var(--SourceCodePro);
-}
-/* x-----navigation-----x */
-
-
+/* https://material-ui.com/styles/advanced/ */
 
 
 
