--- a/src/style.css
+++ b/src/style.css
@@ -5,11 +5,11 @@
     --Rajdhani: 'Rajdhani', sans-serif;
     --SourceCodePro: 'Source Code Pro', monospace;
     
-
+    /* colors */
     --MainColor:white;
     --PrimaryColor:black;
     --SecondaryColor:red;
-    --NavBarColor:rgba(255, 255, 255, 0.233);
+    --NavBarColor:rgba(0, 0, 0, 0.2);
 }
 *{
     padding: 0;
