--- a/src/style.css
+++ b/src/style.css
@@ -30,13 +30,107 @@ body{
     width: 100%;
     max-height: calc(100vh-68px);
     border: 2px solid red;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0;
     /* background: skyblue; */
 }
 
+.homecard{
+    position: relative;
+    height: 400px;
+    width: calc(25% - 0px);
+    color: white;
+    margin: 0 auto;
+    cursor: pointer;
+    z-index: 999;
+}
 
+.imgbx{
+    width: 100%;
+    height: 100%;
+}
+.imgbx img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 
+.btnLabel{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    width: 80%;
+    top: 50%;
+    left: 0;
+    right: 0;
+    transform: translateY(-50.1%);
+    padding: 10px 0;
+    margin: 0 auto;
+    color: white;
+    pointer-events: none;
+    overflow: hidden;
 
+    /* z-index: 99; */
+}
+.btnView{
+    color: black;
+    padding: 10px 20px;
+    font-size: 1em;
+    font-weight: 900;
+    outline: none;
+    background: #FFF7B6;
+    border: none;
+    cursor: pointer;
+    transition: transform .8s ease-in,
+                opacity 1.3s ease-in-out;
+    margin-top: 10px;
+    cursor: pointer;
+    transform: translateY(150%);
+    opacity: 0;
+}
+.homecard:hover .btnView{
+    transform: translateY(0%);
+    opacity: 1;
+}
+.title{
+    background: rgba(128, 255, 0, 0.781);
+    position: relative;
+    transition: 1s ease-in;
+}
+.title::after{
+    content: '';
+    width: 30%;
+    height: 2px;
+    background: white;
+    position: absolute;
+    bottom: 0;
+    display: inline-block;
+}
 
+.homecard:hover .title{
+    /* text-decoration: underline; */
+
+}
+
+@media (max-width:800px) {
+    .homecard{
+        width: 100%;
+        height: 80vh;
+    }
+    .btnView{
+        transform: translateY(0%);
+        opacity: 1;
+    }
+}
+@media (max-width:410px) {
+    .homecard{
+        width: 30px;
+        height: 40px;
+    }
+}
 
 
 
