--- a/src/style.css
+++ b/src/style.css
@@ -29,7 +29,7 @@ body{
 .homepageContainer{
     width: 100%;
     max-height: calc(100vh-68px);
-    border: 2px solid red;
+    /* border: 2px solid red; */
     display: flex;
     flex-wrap: wrap;
     padding: 0;
