--- a/src/style.css
+++ b/src/style.css
@@ -311,6 +311,28 @@ body{
 .bannerContainer{
     width: 100%;
     height: 80vh;
+    position: relative;
+    color: white;
+}
+.backgroundImg{
+    width: 100%;
+    height: 100%;
+}
+.backgroundImg img{
+    width: 100%;
+    height: 100%;
+}
+.content{
+    position: absolute;
+
+    z-index: 999;
+}
+.ImgCover{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.808);
+
 }
 /* ----------bannner----------x */
 
