--- a/src/style.css
+++ b/src/style.css
@@ -82,6 +82,13 @@ body{
     background: transparent;
     color: #f8eb8a;
 }
+
+.btnSize{
+    color: black;
+    padding: 10px 20px;
+    font-size: 1em;
+    font-weight: 900;
+}
 /* -----------------Global css------------------x *
 
 
@@ -238,7 +245,7 @@ body{
     margin: 10px;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.349);
     border-radius: 10px;
-    font-family: 'Courier New', monospace;
+    font-family: var(--SourceCodeProfontfamily);
     overflow: hidden;
 }
 .collectionImgbx{
@@ -465,6 +472,83 @@ body{
     font-family: var(--FiraCodefontfamily);
 }
 /* ---------------subcribe----------------x */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* ------------------cart---------------------- */
+.cartContainer{
+    font-family: var(--AnonymousProfontfamily);
+    padding: 10px 20px;
+    border: 2px solid blue;
+
+}
+.cartTotals{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 10px;
+}
+
+.buttonsHolder{
+    display: flex;
+    justify-content: flex-end;
+    margin: 10px 0;
+}
+
+.design-primary{
+    background: #0275d8;
+    border: 1px solid #0275d8;
+}
+.design-danger{
+    background: #d9534f;
+    border: 1px solid #d9534f;
+}
+
+.design-primary:hover{
+    color: #0275d8;
+    background: transparent;
+}
+.design-danger:hover{
+    color: #d9534f;
+    background: transparent;
+}
+
+.design{
+    border-radius: 5px;
+    margin: 0 10px;
+    cursor: pointer;
+    transition: .5s ease;
+}
+/* ------------------cart----------------------x */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
