--- a/src/style.css
+++ b/src/style.css
@@ -494,8 +494,6 @@ body{
 .cartContainer{
     font-family: var(--AnonymousProfontfamily);
     padding: 10px 20px;
-    border: 2px solid blue;
-
 }
 .cartTotals{
     display: flex;
@@ -503,7 +501,11 @@ body{
     align-items: center;
     padding: 0 10px;
 }
-
+.cardCards{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
 .buttonsHolder{
     display: flex;
     justify-content: flex-end;
@@ -533,6 +535,69 @@ body{
     margin: 0 10px;
     cursor: pointer;
     transition: .5s ease;
+}
+
+
+.CartCardContainer{
+    margin: 10px;
+    width: 400px;
+    height: 370px;
+    overflow: hidden;
+    transition: 250ms;
+    padding: 10px;
+    border-radius: 10px;
+    border: 1px solid transparent;
+    box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.1);
+}
+.CartCardContainer:hover{
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    box-shadow: 1px 5px 5px rgba(0, 0, 0, 0.1);
+}
+
+.cartImgbx{
+    width: 100%;
+    height: 70%;
+}
+.cartImgbx img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.nameNprice{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 10px 0;
+}
+.buttons{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.quantity{
+    display: flex;
+    align-items: center;
+}
+.quantity h4{
+    margin: 0 5px;
+}
+.subtract,.add{
+    width: 20px;
+    height: 20px;
+    color: black;
+    background: #f8eb8a;
+    cursor: pointer;
+    border: none;
+}
+.remove{
+    padding: 10px 15px;
+    font-size: 600;
+    color: black;
+    cursor: pointer;
+    border: none;
+    border-radius: 10px;
+    background: #d9534f;
 }
 /* ------------------cart----------------------x */
 
@@ -619,6 +684,10 @@ body{
     .collectioncard{
         width: 350px; 
         height: 480px;
+    }
+    .CartCardContainer{
+        margin: 10px;
+        width: 80%;
     }
 }
 @media (max-width:500px) {
