--- a/src/style.css
+++ b/src/style.css
@@ -433,11 +433,12 @@ body{
 /* ---------------subcribe---------------- */
 .subContainer{
     width: 100%;
-    height: 50vh;
+    min-height: 50vh;
     background: url('https://images.unsplash.com/photo-1513708929605-6dd0e1b081bd?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=755&q=80');
     background-repeat: no-repeat;
     background-size: cover;
     object-fit: cover;
+    padding: 10px 0;
 }
 
 .SubForm{
@@ -592,12 +593,15 @@ body{
 }
 .remove{
     padding: 10px 15px;
-    font-size: 600;
+    font-size: 800;
     color: black;
     cursor: pointer;
     border: none;
     border-radius: 10px;
     background: #d9534f;
+}
+.remove:hover{
+    background: #d9544fde;
 }
 /* ------------------cart----------------------x */
 
