--- a/src/style.css
+++ b/src/style.css
@@ -296,7 +296,7 @@ body{
 .colorlist,.sizelist{
     display: flex;
 }
-.colorlist li{
+.colorlist button{
     width: 15px;
     height: 15px;
     margin: 0 5px;
@@ -311,13 +311,32 @@ body{
     background: black;
 }
 .colorlist :nth-child(3){
-    background: cyan;
+    background: skyblue;
 }
 .sizelist li{
     margin: 0 5px;
 }
 .sizelist li:hover{
     color: #0026ff !important;
+}
+.sizeBtn{
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    margin-right: 3px;
+    border: none;
+    padding: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: silver;
+    font-size: .8em;
+    cursor: pointer;
+    color: black;
+    font-weight: 500;
+}
+.selectproperties{
+    display: flex;
 }
 /* -------collections---------x */
 
