--- a/src/style.css
+++ b/src/style.css
@@ -76,14 +76,13 @@ body{
 }
 
 .btn{
-    color: black;
+    color: black !important;
     padding: 10px 20px;
     font-size: 1em;
     font-weight: 900;
     outline: none;
     background: #FFF7B6;
     border: none;
-    margin-top: 20px;
     cursor: pointer;
     transition: .5s ease;
     border: 1px solid #f8eb8a;
@@ -91,7 +90,7 @@ body{
 
 .btn:hover{
     background: transparent;
-    color: #f8eb8a;
+    color: #f8eb8a !important;
 }
 
 .btnSize{
@@ -100,7 +99,24 @@ body{
     font-size: 1em;
     font-weight: 900;
 }
+.btnContainer{
+    margin-top: 20px ;
+}
+.policy{
+    padding: 20px 10px;
+}
+.policy h1{
+    text-align: center;
+    margin-bottom: 10px;
+}
+.policy h4{
+    margin-bottom: 2px;
+}
+.policy p{
+    margin-bottom: 20px;
+}
 /* -----------------Global css------------------x *
+
 
 
 
@@ -136,10 +152,9 @@ body{
     /* border: 2px solid blue; */
 
 }
-/* .homepage{
-    border: 2px solid red;
-
-} */
+.homepage{
+ position: relative;
+}
 
 .homecard{
     position: relative;
@@ -362,13 +377,14 @@ body{
 /* ----------count down---------- */
 .sale{
     width: 100%;
-    min-height: 50vh;
+    min-height: 20vh;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     padding: 10px;
     color: white;
     background: black;
+
 }
 .saleBanner,.countdowncard{
     width: 50vh;
@@ -385,7 +401,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: #f8eb8a;
+    background: #61605b;
     min-width: 50px;
     min-height: 50px;
     padding: 0 5px;
@@ -775,6 +791,12 @@ body{
 
 
 
+
+
+
+.emptyHandler a{
+ color: blue !important;
+}
 
 
 
