--- a/src/style.css
+++ b/src/style.css
@@ -371,6 +371,16 @@ body{
 .selectproperties{
     display: flex;
 }
+.inputSelectSize{
+    margin: 0 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.inputSelectSize span{
+    margin-right: 2px;
+}
+
 /* -------collections---------x */
 
 
