--- a/src/style.css
+++ b/src/style.css
@@ -28,20 +28,20 @@
     text-decoration: none;
 }
 .Black,.black,.BLACK{
-    background:black;
-    color:black;
+    background:black !important;
+    color:black !important;
 }
 .White,.white,.WHITE{
-    background:white;
-    color:white;
+    background:white !important;
+    color:white !important;
 }
 .Grey,.grey,.GREY{
-    background:grey;
-    color:grey;
+    background:grey !important;
+    color:grey !important;
 }
 .Skyblue,.skyblue,.SKYBLUE,.SkyBlue{
-    background:skyblue;
-    color:skyblue;
+    background:skyblue !important;
+    color:skyblue !important;
 }
 
 
@@ -347,6 +347,7 @@ body{
 }
 .colorlist,.sizelist{
     display: flex;
+    justify-content: center;
 }
 .colorlist button{
     width: 15px;
@@ -387,6 +388,7 @@ body{
     color: black;
     font-weight: 500;
 }
+
 .selectproperties{
     display: flex;
 }
