--- a/src/style.css
+++ b/src/style.css
@@ -272,6 +272,7 @@ body{
 
 
 /* -------collections--------- */
+
 .collectionContainer{
     width: 100%;
     min-height: calc(100vh-68px);
@@ -279,6 +280,11 @@ body{
     flex-wrap: wrap;
     justify-content: center;
     padding: 20px;
+}
+.collectionHeader{
+    width: 100%;
+    text-align: center;
+    padding: 10px 0;
 }
 .inventoryName{
     display: flex;
