--- a/src/style.css
+++ b/src/style.css
@@ -18,7 +18,7 @@
     --SecondaryColor:red;
     --NavBarColor:rgba(0, 0, 0, 1);
 }
-
+ 
 /* -----------------Global css------------------ */
 *{
     padding: 0;
@@ -428,7 +428,7 @@ body{
 /* ----------count down---------- */
 .sale{
     width: 100%;
-    min-height: 20vh;
+    min-height: 10vh;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -437,7 +437,7 @@ body{
     background: black;
 
 }
-.saleBanner,.countdowncard{
+.saleBanner{
     width: 50vh;
     height: 50vh;
     margin: 5px;
