--- a/src/style.css
+++ b/src/style.css
@@ -446,7 +446,9 @@ body{
     display: flex;
 }
 .countdowncard{
-
+    width: 100%;
+    height: 100%;
+    padding: 20px;
 }
 .timer-element{
     display: flex;
