--- a/src/style.css
+++ b/src/style.css
@@ -55,23 +55,17 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background: rgb(109, 109, 109) !important;
+    color: white !important;
 }
-.activeBtn::after{
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    background:rgb(143, 142, 142);
-    transform: rotate(45deg);
+.activeBtnColor{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid red !important;
 }
-.activeBtn::before{
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    background:rgb(143, 142, 142);
-    transform: rotate(135deg);
-}
+
 
 
 
